# WSL-ArchLinux-Pytorch

./: Install New.md  Install.md  README.md  Test.md  Test_indented.md  pid.md  robot_controller.cpp
1/: 09_BALANCE_ALGORITHM_FULL_REVIEW.md  10_BALANCE_DEBUG_GUIDE.md  README.md  start_input.sh
1/Doc/: 06_FULL_CODE_REVIEW.md  09_BALANCE_ALGORITHM_FULL_REVIEW.md  10_BALANCE_DEBUG_GUIDE.md  CODE_REVIEW_2026_04_24.md
1/common/: mini_json.h
1/controller/: CMakeLists.txt  run.sh
1/controller/include/: controller_types.h  gamepad_reader.h  wayland_app.h
1/controller/src/: config_persistence.cpp  hud_renderer.cpp  main.cpp
1/libusb_demo/libusb_demo/: CMakeLists.txt  main.cpp
1/robot/: CMakeLists.txt
1/robot/include/: nmpc_controller.h  odrive_usb.h  types.h  usb_manager.h
1/robot/src/: balance_controller.cpp  ekf.cpp  logger.cpp  nmpc_controller.cpp  tcp_server.cpp
1/self_balance_robot/Doc/: 00_DOC_INDEX.md  02_CONTROL_AND_ARCHITECTURE.md  03_DEBUG_AND_TROUBLESHOOTING.md  04_INTERFACE_AND_CONSISTENCY_AUDIT.md  05_RUNTIME_CONFIG_AND_LOGGING.md  07_LOGGING_REPLAY_AND_TESTING.md  09_BALANCE_ALGORITHM_FULL_REVIEW.md  10_BALANCE_DEBUG_GUIDE.md  CODE_REVIEW_2026_04_24.md
1/self_balance_robot/controller/: run.sh
1/self_balance_robot/controller/include/: controller_types.h  wayland_app.h
1/self_balance_robot/controller/src/: config_persistence.cpp  hud_renderer.cpp  main.cpp
1/self_balance_robot/robot/include/: balance_controller.h  control_model.h  ekf.h  logger.h  robot.h  types.h
1/self_balance_robot/robot/src/: balance_controller.cpp  control_model.cpp  msp_imu_usb.cpp  odrive_usb.cpp  robot.cpp  usb_manager.cpp
1/self_balance_robot/tools/: replay_csv.py
2/self-balance-robot/self-balance-robot/: README.md
2/self-balance-robot/self-balance-robot/controller/: CMakeLists.txt  run.sh
2/self-balance-robot/self-balance-robot/controller/include/: controller_types.h  tcp_client.h  wayland_app.h
2/self-balance-robot/self-balance-robot/controller/src/: config_persistence.cpp  hud_renderer.cpp  main.cpp
2/self-balance-robot/self-balance-robot/robot/: CMakeLists.txt
2/self-balance-robot/self-balance-robot/robot/include/: balance_controller.h  odrive_usb.h  robot.h  tcp_server.h  types.h
2/self-balance-robot/self-balance-robot/robot/src/: balance_controller.cpp  main.cpp  odrive_usb.cpp  robot.cpp  tcp_server.cpp
Documentation/: WSL.md
self-balance-robot/self-balance-robot/: build.sh
self-balance-robot/self-balance-robot/controller/: CMakeLists.txt  robot_controller.cpp
self-balance-robot/self-balance-robot/robot/include/: balance_controller.h  msp_imu_usb.h  odrive_usb.h  robot.h  tcp_server.h  types.h  usb_manager.h
self-balance-robot/self-balance-robot/robot/src/: balance_controller.cpp  main.cpp  msp_imu_usb.cpp  odrive_usb.cpp  robot.cpp  tcp_server.cpp  usb_manager.cpp
self_balance_robot_throttle_control_logic_fixed/: README.md  build.sh
self_balance_robot_throttle_control_logic_fixed/Doc/: 00_DOC_INDEX.md  01_QUICK_START_AND_TUNING.md  08_EVENTS_AND_METRICS.md  10_BALANCE_DEBUG_GUIDE.md  11_CASCADED_BALANCE_TUNING.md  12_PANEL_RATE_LIMIT_FIX.md  13_THROTTLE_VELOCITY_MODE.md  14_ZERO_THROTTLE_POSITION_HOLD.md  15_AUTOTUNE_FRICTION_NMPC.md  16_THROTTLE_CONTROL_LOGIC_FIX.md  CODE_REVIEW_2026_04_22.md
self_balance_robot_throttle_control_logic_fixed/common/: mini_json.h
self_balance_robot_throttle_control_logic_fixed/controller/: CMakeLists.txt
self_balance_robot_throttle_control_logic_fixed/controller/include/: hud_renderer.h  tcp_client.h  wayland_app.h
self_balance_robot_throttle_control_logic_fixed/controller/src/: hud_renderer.cpp  main.cpp
self_balance_robot_throttle_control_logic_fixed/robot/: CMakeLists.txt
self_balance_robot_throttle_control_logic_fixed/robot/include/: balance_controller.h  robot.h  tcp_server.h  types.h
self_balance_robot_throttle_control_logic_fixed/robot/src/: balance_controller.cpp  logger.cpp  main.cpp  msp_imu_usb.cpp  odrive_usb.cpp  robot.cpp  tcp_server.cpp  usb_manager.cpp
